# test-python-project

./: .gitignore  .pre-commit-config.yaml  BADGES.rst  README.md  REUSE.toml  pyproject.toml  sonar-project.properties  tox.ini
.github/: dependabot.yml
.github/workflows/: build-test.yaml  codeql.yaml  codeql.yml  dependencies.yaml  openssf-scorecard.yaml  release-drafter.yaml  semantic-pull-request.yaml  sha-pinned-actions.yaml  tag-push.yaml
notebooks/: test.ipynb
resources/: README.md  pre-commit-config.yaml
src/: __init__.py
src/lfreleng_test_python_project/: __init__.py
tests/: test_cli.py
tests/resources/: setup.py
tests_fail/: test_cli_fail.py
variations/: dynamic-pdm.toml  dynamic-poetry.toml  dynamic-setuptools.toml  dynamic.toml  static-eol.toml
